--- a/contact.html
+++ b/contact.html
@@ -6,17 +6,19 @@
   <title>Greenden — Contact</title>
 
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <!-- Font Awesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" rel="stylesheet">
 </head>
 <body class="bg-green-50 text-gray-800 antialiased">
 
   <nav class="bg-green-600 text-white px-4 py-3 flex items-center justify-between sticky top-0 z-40">
-    <a href="index.html" class="font-semibold">Greenden</a>
+    <a href="index.html" class="font-semibold uppercase">GREENDEN</a>
 
     <div class="flex items-center gap-4">
       <a href="index.html" class="hidden md:inline hover:underline">Home</a>
       <a href="product.html" class="hidden md:inline hover:underline">Products</a>
       <a href="contact.html" class="hidden md:inline hover:underline">Contact</a>
-      <button id="menuicon" class="md:hidden focus:outline-none">
+      <button id="menuicon" class="md:hidden focus:outline-none" aria-label="Open menu">
         <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
           <path stroke-width="2" stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16"/>
         </svg>
@@ -31,9 +33,9 @@
       <button id="closenav" aria-label="Close">✕</button>
     </div>
     <nav class="flex flex-col p-4 gap-3">
-      <a href="index.html" class="py-2 px-3 rounded hover:bg-green-600">Home</a>
-      <a href="product.html" class="py-2 px-3 rounded hover:bg-green-600">Products</a>
-      <a href="contact.html" class="py-2 px-3 rounded hover:bg-green-600">Contact</a>
+      <a href="index.html" class="py-2 px-3 rounded hover:bg-green-600 nav-link">Home</a>
+      <a href="product.html" class="py-2 px-3 rounded hover:bg-green-600 nav-link">Products</a>
+      <a href="contact.html" class="py-2 px-3 rounded hover:bg-green-600 nav-link">Contact</a>
     </nav>
   </aside>
 
