--- a/product.html
+++ b/product.html
@@ -7,6 +7,8 @@
 
   <!-- Tailwind CSS CDN -->
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <!-- Font Awesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" rel="stylesheet">
   <style>
     /* small helper for cart panel overlay */
     .cart-overlay { background: rgba(0,0,0,0.4); }
@@ -16,20 +18,22 @@
 
   <!-- NAV -->
   <nav class="bg-green-600 text-white px-4 py-3 flex items-center justify-between sticky top-0 z-40">
-    <a href="index.html" class="font-semibold">Greenden</a>
+    <a href="index.html" class="font-semibold uppercase">GREENDEN</a>
 
     <div class="flex items-center gap-4">
       <a href="index.html" class="hidden md:inline hover:underline">Home</a>
       <a href="product.html" class="hidden md:inline hover:underline">Products</a>
       <a href="contact.html" class="hidden md:inline hover:underline">Contact</a>
 
-      <button id="menuicon" class="md:hidden focus:outline-none">
+      <button id="menuicon" class="md:hidden focus:outline-none" aria-label="Open menu">
         <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" viewBox="0 0 24 24" fill="none" stroke="currentColor">
           <path stroke-width="2" stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16"/>
         </svg>
       </button>
 
       <button id="openCartBtn" class="bg-white text-green-700 px-3 py-1 rounded inline-flex items-center gap-2">
+        <i class="fa-solid fa-cart-shopping"></i>
+        <span class="sr-only">Cart</span>
         Cart <span id="cartCountTop" class="bg-green-100 text-green-800 text-sm font-medium px-2 py-0.5 rounded">0</span>
       </button>
     </div>
@@ -42,9 +46,9 @@
       <button id="closenav" aria-label="Close">✕</button>
     </div>
     <nav class="flex flex-col p-4 gap-3">
-      <a href="index.html" class="py-2 px-3 rounded hover:bg-green-600">Home</a>
-      <a href="product.html" class="py-2 px-3 rounded hover:bg-green-600">Products</a>
-      <a href="contact.html" class="py-2 px-3 rounded hover:bg-green-600">Contact</a>
+      <a href="index.html" class="py-2 px-3 rounded hover:bg-green-600 nav-link">Home</a>
+      <a href="product.html" class="py-2 px-3 rounded hover:bg-green-600 nav-link">Products</a>
+      <a href="contact.html" class="py-2 px-3 rounded hover:bg-green-600 nav-link">Contact</a>
     </nav>
   </aside>
 
@@ -61,8 +65,17 @@
     </div>
 
     <!-- Product grid (rendered dynamically by product.js) -->
-    <section id="product-container" class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-6">
+    <!-- Default mobile: single column; sm -> 2 columns; md -> 4 columns -->
+    <section id="product-container" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-6">
       <!-- product cards will be injected here -->
+    </section>
+
+    <!-- Best sellers repeated on product page -->
+    <section class="mt-10">
+      <h2 class="text-2xl font-semibold text-green-900 mb-4">Best Sellers</h2>
+      <div id="best-sellers" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-6">
+        <!-- filled by product.js (reuses PRODUCTS array) -->
+      </div>
     </section>
   </main>
 
@@ -93,7 +106,7 @@
   </div>
 
   <footer class="bg-green-600 p-4 text-center text-white mt-12">
-    © 2025 Greenden.com
+    <p>&copy;2025 Greenden.com</p> 
   </footer>
 
   <script src="./product.js"></script>
